@@ -8,7 +8,7 @@ fi
 
 LOC=`echo $1 | sed 's/-//g'`
 
-locale -a | sed 's/-//g' | grep -i "${LOC}" 2>&1 > /dev/null
+locale -a | sed 's/-//g' | grep -i "^${LOC}$" 2>&1 > /dev/null
 
 if [ "$?" = "0" ]
 then
