@@ -1,3 +1,9 @@
+2016-11-15 Erwin Waterlander <waterlan@xs4all.nl>
+	* test/: Use by default C.UTF-8 locale for UTF-16 tests. Not all build
+	  environments have the en_US.UTF-8 locale. Try en_US.UTF-8 if C.UTF-8
+	  is not available, else skip the UTF-16 tests. Thanks to report of
+	  Jari Aalto.
+
 2016-11-01 Jari Aalto <jari.aalto@cante.net>
 	* Makefile: Reproducible date in man pages.
 	* test/Makefile: Disable by default colored output. To enable colored
